--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,17 +1,61 @@
 <% provide(:title, 'Новая запись') %>
+
+<script type="application/javascript">
+  $(document).ready(function() {
+
+    $('div.expandable').expander({
+      slicePoint:       0,
+      expandText: 'подробнее...',
+      userCollapseText: 'скрыть подробности'
+    });
+  });
+    function clr()
+    {
+      if ($('#id').val() != '') {
+        $('#id').val("");
+        $('#email').val("");
+        $('#phone').val("");
+        $('#birth_date').val("");
+        $('#address').val("");
+      }
+    }
+</script>
+
 <h1>Новая запись</h1>
+
 
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@appointment) do |f| %>
 
-        <%= f.label :customer_name, "Пациент:" %>
-        <%= f.text_field :customer_name %>
+        <%= fields_for(@appointment.customer) do |customer_fields| %>
+
+            <%= customer_fields.hidden_field :id, id: 'id' %>
+            <%= customer_fields.label :name, "Пациент:" %>
+            <%= customer_fields.autocomplete_field :name, autocomplete_customer_name_appointments_path, onkeypress: "clr()", :update_elements => {:email => '#email', :phone => '#phone', :birth_date => '#birth_date', :address => '#address', :id => '#id'}%>
+            <div class="expandable">
+            <table>
+              <tr>
+                <td><%= customer_fields.label :email, "E-mail:" %></td>
+                <td><%= customer_fields.label :phone, "Телефон:" %></td>
+              </tr>
+              <tr>
+                <td><%= customer_fields.email_field :email, id: 'email' %></td>
+                <td><%= customer_fields.telephone_field :phone, id: 'phone' %></td>
+              </tr>
+            </table>
+            <%= customer_fields.label :birth_date, "Дата рождения:" %>
+            <%= customer_fields.date_field :birth_date, id: 'birth_date'   %>
+            <%= customer_fields.label :address, "Адрес:" %>
+            <%= customer_fields.text_area :address, id: 'address'  %>
+            </div>
+        <% end %>
+
 
         <table>
           <tr>
             <td><%= f.label :start_date, "Дата:" %></td>
-            <td><%= f.label :start_time, "Время:" %></td>
+            <td><%= f.label :start_time, "Время:"  %></td>
             <td><%= f.label :duration, "Длительность (мин):" %></td>
           </tr>
           <tr>
