--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -22,7 +22,7 @@
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
-          <th><%= t('date.abbr_day_names')[day.wday]%> </th>
+          <th><%= t('date.abbr_day_names')[day.wday]%>, <%=day.strftime("%d.%m") %> </th>
         <% end %>
       </tr>
     </thead>
