--- a/app/views/shared/_admin_timetable.html.erb
+++ b/app/views/shared/_admin_timetable.html.erb
@@ -2,33 +2,43 @@
   <% @appointments = Appointment.GetAppointmentRange(params.fetch(:start_date, Date.current).to_date) %>
   <%= week_calendar events: @appointments do |date, appointments| %>
 
-      <div><%=date.strftime("%d.%m") %></div>
+      <!--<div><%#=date.strftime("%d.%m") %></div>-->
       <% appointments.each do |appointment| %>
-          <div style="border: solid 1px black">
-            <div>
-              <a href="/appointments/<%=appointment.id %>/edit" >
-                <%=appointment.start_time.strftime("%H:%M")%>
+          <div style="border: solid 1px black" class="panel panel-info">
+            <div class="panel-heading">
+              <div class="row">
+              <div class="pull-left">
+                <a href="/appointments/<%=appointment.id %>/edit" >
+                  <%=appointment.start_time.strftime("%H:%M")%> - <%=appointment.end_time.strftime("%H:%M")%>
+                </a>
+              </div>
+              <div class="pull-right">
+                <%= link_to appointment, method: :delete,
+                            data: { confirm: "Удалить запись от #{appointment.start_time.strftime("%d.%m %H:%M")} для #{appointment.customer.name} ?" },
+                            title: "Удаление записи", class: "btn btn-danger del-btn-circle" do  %>
+                    <i class="glyphicon glyphicon-remove"></i>
+                <% end %>
+              </div>
+              </div>
+            </div>
 
-              </a>
-            </div>
             <div>
-              <%=appointment.GetDuration()%> мин
-            </div>
-            <div>
+              <a href="/customers/<%=appointment.customer.id %>/edit" >
               <%=appointment.customer.name%>
+              </a>
             </div>
             <div>
               <%=appointment.customer.phone%>
             </div>
-            <div>
-              <%= link_to "Удалить", appointment, method: :delete,
-                          data: { confirm: "Удалить запись от #{appointment.start_time.strftime("%d.%m %H:%M")} для #{appointment.customer.name} ?" },
-                          title: "Удаление записи" %>
-            </div>
+
           </div>
-          <br>
+
       <% end %>
-      <a href="/appointments/new?start_date=<%= date.to_date %>" >Добавить запись</a>
+      <% if date.to_date >= Date.current.to_date %>
+        <a class="btn btn-success btn-circle" href="/appointments/new?start_date=<%= date.to_date %>" title="Добавить запись" >
+          <i class="glyphicon glyphicon-plus"></i>
+        </a>
+      <% end %>
   <% end %>
 
 </div>
