--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="list-group-item">
   <span class="customername">
     <a href="/customers/<%=customer.id %>/edit" >
       <%= customer.name %>
