--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -3,25 +3,13 @@
 <h1>Новый пациент</h1>
 
 <div class="row">
-  <div class="span6 offset3">
+  <div class="col-md-6 col-md-offset-3">
     <%= form_for(@customer) do |customer_fields| %>
+        <%= render 'shared/error_messages', object: @customer, title: "Ошибки при добавлении пациента: " %>
         <%= customer_fields.label :name, "ФИО:" %>
-        <%= customer_fields.text_field :name %>
+        <%= customer_fields.text_field :name, class: "form-control" %>
 
-        <table>
-          <tr>
-            <td><%= customer_fields.label :email, "E-mail:" %></td>
-            <td><%= customer_fields.label :phone, "Телефон:" %></td>
-          </tr>
-          <tr>
-            <td><%= customer_fields.email_field :email %></td>
-            <td><%= customer_fields.telephone_field :phone %></td>
-          </tr>
-        </table>
-        <%= customer_fields.label :birth_date, "Дата рождения:" %>
-        <%= customer_fields.date_field :birth_date %>
-        <%= customer_fields.label :address, "Адрес:" %>
-        <%= customer_fields.text_area :address  %>
+        <%= render 'shared/customer_additional_fields', f:customer_fields %>
         <%= customer_fields.submit "Добавить", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
