--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Новая запись') %>
+<% provide(:title, 'Новая запись на прием') %>
 
 <script type="application/javascript">
   $(document).ready(function() {
@@ -21,7 +21,7 @@
     }
 </script>
 
-<h1>Новая запись</h1>
+<h1>Новая запись на прием</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
