--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Редактирование записи') %>
+<% provide(:title, 'Редактирование записи на прием') %>
 
 <script type="application/javascript">
   $(document).ready(function() {
@@ -21,7 +21,7 @@
   }
 </script>
 
-<h1>Редактирование записи</h1>
+<h1>Редактирование записи на прием</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
