--- a/app/views/appointments/_appointment_fields.html.erb
+++ b/app/views/appointments/_appointment_fields.html.erb
@@ -14,5 +14,5 @@
   </tr>
 </table>
 
-<%= f.label :comment, "Заметки:" %>
+<%= f.label :comment, "Описание:" %>
 <%= f.text_area :comment, size: "60", class: "form-control" %>
